--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 server/node_modules
+server/configFiles
 # dependencies
 neostore/node_modules
 neostore/.pnp
